fix: :bug: fixed scrollbar width not reserved for all pages
Content was moving due to pages having or not a scrollbar.

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -12,6 +12,10 @@ $dark-light: #301C40;
 $dark-lighter: #322142;
 $notification-background: rgba(122, 110, 124, 0.15);
 
+$thumbSize: 8px;
+$padding: 11px;
+$scrollbarSize: $padding * 2 + $thumbSize;
+
 @mixin background-gradient() {
     background: linear-gradient(304.1deg, rgba(17, 8, 44, 0.5) 27.13%, rgba(21, 10, 52, 0) 64.84%), #220D32;
 }
